deploy/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubereats-dev
  labels:
    app.kubernetes.io/part-of: kubereats
    app.kubernetes.io/environment: dev
